get svm predictions

--- a/Code/Classification/SVM/SVM_Predictions_All_Features_PCA.ipynb
+++ b/Code/Classification/SVM/SVM_Predictions_All_Features_PCA.ipynb
@@ -54,111 +54,111 @@
      "output_type": "stream",
      "text": [
       "all test data\n",
-      "     Class                       harmonized_filename  \\\n",
-      "0    Sedan    Sedan_test_orig_test_02070_resized.jpg   \n",
-      "1    Sedan    Sedan_test_orig_test_05952_resized.jpg   \n",
-      "2    Sedan   Sedan_test_orig_train_08046_resized.jpg   \n",
-      "3      SUV      SUV_test_orig_test_00921_resized.jpg   \n",
-      "4      SUV     SUV_test_orig_train_03917_resized.jpg   \n",
-      "..     ...                                       ...   \n",
-      "88     SUV      SUV_test_orig_test_05041_resized.jpg   \n",
-      "89   Sedan    Sedan_test_orig_test_03443_resized.jpg   \n",
-      "90  Pickup  Pickup_test_orig_train_04088_resized.jpg   \n",
-      "91   Sedan   Sedan_test_orig_train_03673_resized.jpg   \n",
-      "92   Sedan   Sedan_test_orig_train_06616_resized.jpg   \n",
+      "          Class                           harmonized_filename  \\\n",
+      "0        Pickup       Pickup_test_orig_test_05620_resized.jpg   \n",
+      "1           SUV          SUV_test_orig_test_08041_resized.jpg   \n",
+      "2   Convertible  Convertible_test_orig_test_00822_resized.jpg   \n",
+      "3   Convertible  Convertible_test_orig_test_00618_resized.jpg   \n",
+      "4        Pickup       Pickup_test_orig_test_05241_resized.jpg   \n",
+      "..          ...                                           ...   \n",
+      "88          SUV          SUV_test_orig_test_07199_resized.jpg   \n",
+      "89  Convertible  Convertible_test_orig_test_06645_resized.jpg   \n",
+      "90        Sedan       Sedan_test_orig_train_00676_resized.jpg   \n",
+      "91        Sedan       Sedan_test_orig_train_04786_resized.jpg   \n",
+      "92          SUV         SUV_test_orig_train_03571_resized.jpg   \n",
       "\n",
       "                                      image_path_blur  \\\n",
-      "0   ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
-      "1   ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
-      "2   ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
-      "3   ../../../Images/test/Blurred/SUV_test_orig_tes...   \n",
-      "4   ../../../Images/test/Blurred/SUV_test_orig_tra...   \n",
+      "0   ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
+      "1   ../../../Images/test/Blurred/SUV_test_orig_tes...   \n",
+      "2   ../../../Images/test/Blurred/Convertible_test_...   \n",
+      "3   ../../../Images/test/Blurred/Convertible_test_...   \n",
+      "4   ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
       "..                                                ...   \n",
       "88  ../../../Images/test/Blurred/SUV_test_orig_tes...   \n",
-      "89  ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
-      "90  ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
+      "89  ../../../Images/test/Blurred/Convertible_test_...   \n",
+      "90  ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
       "91  ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
-      "92  ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
+      "92  ../../../Images/test/Blurred/SUV_test_orig_tra...   \n",
       "\n",
       "                                   image_path_no_blur  All Features_PCA_0  \\\n",
-      "0   ../../../Images/test/No_Blur/Sedan_test_orig_t...           -6.990904   \n",
-      "1   ../../../Images/test/No_Blur/Sedan_test_orig_t...           15.547967   \n",
-      "2   ../../../Images/test/No_Blur/Sedan_test_orig_t...           12.637518   \n",
-      "3   ../../../Images/test/No_Blur/SUV_test_orig_tes...            2.544836   \n",
-      "4   ../../../Images/test/No_Blur/SUV_test_orig_tra...           21.314866   \n",
+      "0   ../../../Images/test/No_Blur/Pickup_test_orig_...           22.973553   \n",
+      "1   ../../../Images/test/No_Blur/SUV_test_orig_tes...            5.961664   \n",
+      "2   ../../../Images/test/No_Blur/Convertible_test_...          -12.207156   \n",
+      "3   ../../../Images/test/No_Blur/Convertible_test_...           -5.629666   \n",
+      "4   ../../../Images/test/No_Blur/Pickup_test_orig_...           22.388667   \n",
       "..                                                ...                 ...   \n",
-      "88  ../../../Images/test/No_Blur/SUV_test_orig_tes...            4.224072   \n",
-      "89  ../../../Images/test/No_Blur/Sedan_test_orig_t...           12.339253   \n",
-      "90  ../../../Images/test/No_Blur/Pickup_test_orig_...          -32.779678   \n",
-      "91  ../../../Images/test/No_Blur/Sedan_test_orig_t...           -2.079561   \n",
-      "92  ../../../Images/test/No_Blur/Sedan_test_orig_t...            9.310702   \n",
+      "88  ../../../Images/test/No_Blur/SUV_test_orig_tes...           11.499346   \n",
+      "89  ../../../Images/test/No_Blur/Convertible_test_...          -19.857812   \n",
+      "90  ../../../Images/test/No_Blur/Sedan_test_orig_t...            5.816799   \n",
+      "91  ../../../Images/test/No_Blur/Sedan_test_orig_t...          -11.683421   \n",
+      "92  ../../../Images/test/No_Blur/SUV_test_orig_tra...           13.214886   \n",
       "\n",
       "    All Features_PCA_1  All Features_PCA_2  All Features_PCA_3  \\\n",
-      "0            -3.200830           15.275629            8.628781   \n",
-      "1            38.916794           11.098074            1.697756   \n",
-      "2            23.474318           -3.580046           11.640196   \n",
-      "3           -15.772142          -29.560953          -16.578640   \n",
-      "4             9.737223            5.604927          -23.858905   \n",
+      "0            20.998905            6.563697           12.701136   \n",
+      "1           -12.432886          -13.545941            5.289027   \n",
+      "2           -20.436217           16.482607           -9.366273   \n",
+      "3           -18.343653            9.365736          -14.630939   \n",
+      "4             6.962591            6.695841            4.297897   \n",
       "..                 ...                 ...                 ...   \n",
-      "88            4.153494           13.497448           -2.832947   \n",
-      "89           -8.639370           22.579441           -2.573716   \n",
-      "90           16.104165          -22.102676           -8.115009   \n",
-      "91          -26.848298          -14.338475           18.175206   \n",
-      "92          -29.889079            8.215676           21.659739   \n",
+      "88           -0.009996          -13.638639           -6.299581   \n",
+      "89           13.045699           11.519343          -10.447213   \n",
+      "90           -4.898177          -12.652016           11.481651   \n",
+      "91           11.623267          -14.621022            9.876198   \n",
+      "92           -8.091207           -5.508527           17.332663   \n",
       "\n",
-      "    All Features_PCA_4  All Features_PCA_5  ...  All Features_PCA_1490  \\\n",
-      "0            -9.519654           17.349227  ...              -0.332544   \n",
-      "1             4.563522            1.405077  ...              -0.891757   \n",
-      "2            -6.822529            8.759198  ...               1.353636   \n",
-      "3            -6.568159            5.586886  ...              -1.340881   \n",
-      "4             1.409176           -5.595996  ...               0.915971   \n",
+      "    All Features_PCA_4  All Features_PCA_5  ...  All Features_PCA_1240  \\\n",
+      "0             7.964405            1.083558  ...               0.392209   \n",
+      "1             1.271997            4.281756  ...              -0.515538   \n",
+      "2             7.696901          -10.725749  ...              -0.251145   \n",
+      "3            12.209700          -11.077177  ...              -0.075696   \n",
+      "4            13.043093            5.451719  ...              -1.543443   \n",
       "..                 ...                 ...  ...                    ...   \n",
-      "88          -19.334771           11.895302  ...               1.362277   \n",
-      "89          -22.591148           -5.528287  ...               0.811751   \n",
-      "90           -5.026084            6.206875  ...               0.607747   \n",
-      "91           22.045283          -27.164697  ...               0.355106   \n",
-      "92           29.208622           -5.807491  ...              -0.087843   \n",
+      "88            4.551846           -3.843374  ...              -0.164451   \n",
+      "89            6.136510           -2.518590  ...               0.224751   \n",
+      "90            0.548339          -12.737478  ...               0.240004   \n",
+      "91            0.176486           -5.066620  ...               0.254412   \n",
+      "92           -2.428351            0.525998  ...              -0.613803   \n",
       "\n",
-      "    All Features_PCA_1491  All Features_PCA_1492  All Features_PCA_1493  \\\n",
-      "0                0.141043               0.021174               0.586792   \n",
-      "1               -0.357932               0.107585              -1.503773   \n",
-      "2                0.230535              -0.227958               0.296504   \n",
-      "3               -0.270067               0.728761              -0.660735   \n",
-      "4                0.748039              -0.045629              -0.606615   \n",
+      "    All Features_PCA_1241  All Features_PCA_1242  All Features_PCA_1243  \\\n",
+      "0                0.431248              -0.762200               1.197558   \n",
+      "1               -0.035794               0.323531              -0.406426   \n",
+      "2                0.366024              -0.179400              -1.078422   \n",
+      "3               -1.079036               0.759869              -0.617673   \n",
+      "4                0.331695               0.328752              -0.013205   \n",
       "..                    ...                    ...                    ...   \n",
-      "88               1.224158               0.537673              -0.097273   \n",
-      "89               1.479180              -0.684535              -0.650944   \n",
-      "90               0.343927              -0.789301              -0.476670   \n",
-      "91              -0.144502              -0.800328              -0.186561   \n",
-      "92               0.011420               0.005912              -0.529825   \n",
+      "88              -0.028136               0.221309              -1.752510   \n",
+      "89               0.497925              -0.610726              -0.024579   \n",
+      "90               0.654972              -0.256768               0.005606   \n",
+      "91              -0.048216              -0.336135              -0.111575   \n",
+      "92               0.498929              -0.200079               0.010925   \n",
       "\n",
-      "    All Features_PCA_1494  All Features_PCA_1495  All Features_PCA_1496  \\\n",
-      "0                0.182852               0.979258              -0.607330   \n",
-      "1               -0.261431              -0.875915               0.926041   \n",
-      "2                1.707603               0.486125               0.642673   \n",
-      "3                0.353568               1.220075               0.399705   \n",
-      "4                0.620401              -0.935057               0.240115   \n",
+      "    All Features_PCA_1244  All Features_PCA_1245  All Features_PCA_1246  \\\n",
+      "0               -0.129846               0.726487              -1.211721   \n",
+      "1               -0.816935              -0.203141              -0.579614   \n",
+      "2               -0.062062               1.047896               0.175091   \n",
+      "3                0.773769               0.152802              -0.268483   \n",
+      "4               -0.818107              -1.065723              -1.016969   \n",
       "..                    ...                    ...                    ...   \n",
-      "88               0.094079              -0.790378               1.156851   \n",
-      "89               0.693713               1.631056               0.240309   \n",
-      "90              -0.248685              -0.360589               1.046381   \n",
-      "91               1.282132               0.023170              -0.529969   \n",
-      "92              -0.084074               0.590275               0.303014   \n",
+      "88              -0.397213               0.502855               0.050493   \n",
+      "89               0.469170               0.751854               0.651190   \n",
+      "90              -0.408048              -0.552364              -0.129252   \n",
+      "91               0.377692               0.360716               0.552224   \n",
+      "92              -1.437460               0.102954               0.325945   \n",
       "\n",
-      "    All Features_PCA_1497  All Features_PCA_1498  All Features_PCA_1499  \n",
-      "0                0.656153              -0.487718              -0.279664  \n",
-      "1                0.244745              -0.580804              -0.938659  \n",
-      "2               -0.790991               0.177488              -0.479993  \n",
-      "3               -0.514409               1.066678              -0.364402  \n",
-      "4                0.939792               0.804145              -0.227615  \n",
+      "    All Features_PCA_1247  All Features_PCA_1248  All Features_PCA_1249  \n",
+      "0               -0.554877               0.943314               0.964773  \n",
+      "1               -0.119499              -0.837906              -0.183398  \n",
+      "2               -0.885347              -0.805116              -0.129853  \n",
+      "3               -0.113670              -0.017256               0.178108  \n",
+      "4               -0.175945              -0.164543              -0.404169  \n",
       "..                    ...                    ...                    ...  \n",
-      "88              -1.674831              -1.301797               1.076906  \n",
-      "89               0.774536               1.112378               0.847703  \n",
-      "90               0.807112              -0.499620               0.777492  \n",
-      "91               0.445358              -0.136691               1.089014  \n",
-      "92               1.214107              -0.213177               0.152596  \n",
+      "88              -0.337516              -1.451758              -1.219367  \n",
+      "89              -0.157917               0.061688               0.671482  \n",
+      "90               0.131717              -0.055589               0.599182  \n",
+      "91              -0.290395              -0.337396               1.240404  \n",
+      "92              -0.261540              -0.916725              -0.606214  \n",
       "\n",
-      "[1489 rows x 1504 columns]\n"
+      "[1489 rows x 1254 columns]\n"
      ]
     }
    ],
@@ -201,16 +201,20 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\sklearn\\base.py:347: InconsistentVersionWarning: Trying to unpickle estimator SVC from version 1.4.1.post1 when using version 1.3.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best model\n",
-      "LogisticRegression(C=0.1, class_weight='balanced', l1_ratio=1.0, max_iter=1000,\n",
-      "                   multi_class='ovr', penalty='elasticnet', solver='saga')\n",
-      "predictions head\n",
-      "['Sedan' 'Sedan' 'Sedan' 'Pickup' 'SUV']\n",
-      "prediction time in minutes:  0.0002644260724385579\n",
-      "prediction time per image in minutes:  1.775863481790181e-07\n"
+      "Prediction time in minutes:  0.10190941095352173\n",
+      "Prediction time per image in minutes:  6.844151172163984e-05\n"
      ]
     }
    ],
@@ -235,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
