run Confusion matrix

--- a/Code/Classification/XGBoost/fit_XGBoost_All_data.ipynb
+++ b/Code/Classification/XGBoost/fit_XGBoost_All_data.ipynb
@@ -245,7 +245,7 @@
    "source": [
     "#prepare matrices\n",
     "sample_data = training_data.sample(frac=0.1)\n",
-    "X_train, y_train = prepare_matrices(training_data)"
+    "X_train, y_train,label_encoder = prepare_matrices(training_data)"
    ]
   },
   {
@@ -276,13 +276,7 @@
       "Training time in minutes:  234.5295533180237\n",
       "Training time per image in minutes:  0.03906872452407524\n",
       "Train accuracy of best model:  1.0\n",
-      "Mean cross validated accuracy of best model:  0.9093798223702472\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Mean cross validated accuracy of best model:  0.9093798223702472\n",
       "Hyperparameters searched:  [{'learning_rate': [0.01, 0.1, 0.3], 'n_estimators': [100, 200], 'max_depth': [3, 6], 'subsample': [0.8, 1], 'colsample_bytree': [0.8, 1]}]\n",
       "Tuned hyperparameters:  {'colsample_bytree': 1, 'learning_rate': 0.3, 'max_depth': 3, 'n_estimators': 200, 'subsample': 0.8}\n"
      ]
@@ -309,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
