XGBoost Bug fixed

--- a/Code/Confusion Matrix/Confusion_matrix_Master_function.ipynb
+++ b/Code/Confusion Matrix/Confusion_matrix_Master_function.ipynb
@@ -332,6 +332,18 @@
    "source": [
     "analyze_classifier_performance('../../Data/Predictions/', 'SVM')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b78c9249",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#run this to get the Confusion matrix and classfication report files\n",
+    "\n",
+    "# analyze_classifier_performance('../../Data/Predictions/', 'XGBoost')"
+   ]
   }
  ],
  "metadata": {
